# CBNE

./: .dockerignore  .gitignore  CMakeLists.txt  Cbne.h  Complex.cpp  Complex.h  Config.h  Dockerfile  LICENSE  README.md  Statistics.h  main.cpp
graphs/: Graph-1.graphml  Graph-2.graphml  Graph-3.graphml  Graph-4.graphml
tests/: benchmark.cpp  test.cpp
